syntax = "proto3";

package types.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/amimof/voiyd/api/types/v1;types";

message Condition {
  google.protobuf.StringValue type = 1 [(buf.validate.field).string.min_len = 1];
  google.protobuf.BoolValue status = 2 [(buf.validate.field).required = true];
  google.protobuf.StringValue reason = 3 [(buf.validate.field).string.min_len = 1];
  google.protobuf.StringValue msg = 4;
  google.protobuf.Timestamp last_transition_time = 5 [(buf.validate.field).required = true];
}

message ConditionReport {
  string resource_id = 1 [(buf.validate.field).string.min_len = 1];
  string type = 3 [(buf.validate.field).string.min_len = 1];
  ConditionStatus status = 4 [(buf.validate.field).required = true];
  string reason = 5 [(buf.validate.field).string.min_len = 1];
  string msg = 6;
  uint64 observed_generation = 7;
  google.protobuf.Timestamp observed_at = 8 [(buf.validate.field).required = true];
  map<string, google.protobuf.StringValue> metadata = 9;
  string reporter = 10;
}

enum ConditionStatus {
  CONDITION_STATUS_UNSPECIFIED = 0;
  CONDITION_STATUS_TRUE = 1;
  CONDITION_STATUS_FALSE = 2;
  CONDITION_STATUS_UNKNOWN = 3;
}

message ConditionRequest {
  string resource_version = 1 [(buf.validate.field).string.min_len = 1];
  types.v1.ConditionReport report = 2;
}
